--- a/app/views/bands/index.html.erb
+++ b/app/views/bands/index.html.erb
@@ -1,1 +1,6 @@
 <%= link_to "Create new band", new_band_path %>
+
+<% @bands.each do |band| %>
+  <br>
+  <%= link_to band.name, band_path(band) %>
+<% end %>
