--- a/app/views/bands/show.html.erb
+++ b/app/views/bands/show.html.erb
@@ -4,3 +4,7 @@
 
 <%= link_to "Edit Band", edit_band_path(@band) %>
 <%= link_to "Delete Band", band_path(@band), method: :delete %>
+
+<br>
+
+<%= link_to "Add New Song", new_band_song_path(@band) %>
