--- a/app/views/songs/_new_song_form.html.erb
+++ b/app/views/songs/_new_song_form.html.erb
@@ -1,3 +1,9 @@
+<% if @song.errors.any? %>
+  <%  @song.errors.full_messages.each do |msg| %>
+    <li>  <%= msg %>  </li>
+  <% end %>
+<% end %>
+
 <%= form_for [@band, @song] do |f| %>
 
 <div>
