band members can delete songs

--- a/app/views/songs/show.html.erb
+++ b/app/views/songs/show.html.erb
@@ -1,2 +1,4 @@
 <h2><%= @song.title %></h2>
 <p><%= @song.tempo %></p>
+
+<%= link_to "Delete Song", band_song_path(@band, @song), method: :delete %>
