created a method to extract html from iframe

--- a/app/views/songs/show.html.erb
+++ b/app/views/songs/show.html.erb
@@ -3,3 +3,7 @@
 
 <%= link_to "Edit Song", edit_band_song_path(@band, @song) %>
 <%= link_to "Delete Song", band_song_path(@band, @song), method: :delete %>
+
+<br>
+
+<iframe width="70%" height="100" scrolling="no" frameborder="no" src="https://w.soundcloud.com/player/?url=https%3A//api.soundcloud.com/tracks/140638403&amp;color=ff5500&amp;auto_play=false&amp;hide_related=false&amp;show_comments=true&amp;show_user=true&amp;show_reposts=false&single_active=false"></iframe>
