--- a/app/views/songs/show.html.erb
+++ b/app/views/songs/show.html.erb
@@ -6,4 +6,10 @@
 
 <br>
 
-<iframe width="70%" height="100" scrolling="no" frameborder="no" src="https://w.soundcloud.com/player/?url=https%3A//api.soundcloud.com/tracks/140638403&amp;color=ff5500&amp;auto_play=false&amp;hide_related=false&amp;show_comments=true&amp;show_user=true&amp;show_reposts=false&single_active=false"></iframe>
+<%= link_to "Add New Track", new_song_track_path(@song) %>
+
+<% @tracks.each do |track| %>
+<br>
+  <%= track.instrument %>
+  <iframe width="70%" height="150" scrolling="no" frameborder="no" src="<%= track.soundcloud %>&single_active=false"></iframe>
+<% end %>
