--- a/app/views/songs/show.html.erb
+++ b/app/views/songs/show.html.erb
@@ -15,7 +15,7 @@
         </section>
       </div>
     </div>
-    
+
     <div class="panel callout radius">
       <strong>Song Settings</strong>
       <h6><%= link_to "Add New Track", new_song_track_path(@song) %></h6>
@@ -27,9 +27,18 @@
     <div class="row">
       <div class="large-12 columns">
         <h2> Tracks </h2>
-        <% @tracks.each do |track| %>
+          <dd>
+            <button class="play">Play</button>
+          </dd>
+        <% @tracks.each_with_index do |track, index| %>
         <h4><strong><%= track.instrument %></strong></h4>
-          <iframe width="100%" height="150" scrolling="no" frameborder="no" src="<%= track.soundcloud %>&single_active=false"></iframe>
+        </dl>
+          <iframe  id="soundcloud_widget_<%= index %>"
+            src="http://w.soundcloud.com/player/?url=https://api.soundcloud.com/tracks/<%= track.soundcloud %>&show_artwork=false&liking=false&sharing=false&auto_play=false&single_active=false"
+            width="100%"
+            height="120"
+            frameborder="no">
+          </iframe>
         <br>
         <% end %>
       </div>
