--- a/app/views/bands/show.html.erb
+++ b/app/views/bands/show.html.erb
@@ -5,8 +5,9 @@
 <!-- Side Bar -->
 
     <div class="large-4 small-12 columns">
-
-      <img src="http://placehold.it/500x500&text=Logo">
+      <div class="image-frame">
+        <img src="<%= @band.profile_photo %>" width="300">
+      </div>
 
       <div class="hide-for-small panel">
         <h3><%= @band.name %></h3>
