--- a/app/views/bands/_edit_band_form.html.erb
+++ b/app/views/bands/_edit_band_form.html.erb
@@ -15,6 +15,16 @@
   <%= f.text_area :genre %>
 </div>
 
+<div>
+  <%= f.label :profile_photo, "Change your Photo" %>
+  <%= f.file_field :profile_photo %>
+</div>
+
+<div>
+  <%= f.label :remove_profile_photo, "Remove your Photo" %>
+  <%= f.check_box :remove_profile_photo %>
+</div>
+
 <p>
   <%= f.submit "Update Band" %>
 </p>
