--- a/app/views/bands/_new_band_form.html.erb
+++ b/app/views/bands/_new_band_form.html.erb
@@ -15,6 +15,11 @@
   <%= f.text_area :genre %>
 </div>
 
+<div>
+  <%= f.label :profile_photo, "Add Band Photo" %>
+  <%= f.file_field :profile_photo %>
+</div>
+
 <p>
   <%= f.submit "Submit Band" %>
 </p>
