--- a/app/views/bands/_new_band_form.html.erb
+++ b/app/views/bands/_new_band_form.html.erb
@@ -10,9 +10,14 @@
   <%= f.text_area :bio %>
 </div>
 
-<div>
+</div>
   <%= f.label :genre %>
   <%= f.text_area :genre %>
+</div>
+
+</div>
+  <%= f.label :band_photo %>
+  <%= f.file_field :band_photo %>
 </div>
 
 <p>
