--- a/app/views/bands/show.html.erb
+++ b/app/views/bands/show.html.erb
@@ -5,9 +5,10 @@
 <!-- Side Bar -->
 
     <div class="large-4 small-12 columns">
-
-      <img src="http://placehold.it/500x500&text=Logo">
-
+      <div class="image-frame">
+        <img src="<%= @band.band_photo %>">
+      </div>
+      
       <div class="hide-for-small panel">
         <h3><%= @band.name %></h3>
         <h5><%= @band.genre %></h5>
