--- a/app/views/songs/show.html.erb
+++ b/app/views/songs/show.html.erb
@@ -2,7 +2,11 @@
   <br>
   <div class="large-3 columns ">
     <div class="panel">
-      <a href="#"><img src="http://placehold.it/300x240&text=[img]" /></a>
+      <a href="#">
+        <div class="image-frame">
+          <img src="<%= @band.band_photo %>" />
+        </div>
+      </a>
         <h4><%= @song.title %></h4>
         <h4><%= @band.name %></h4>
       <div class="section-container vertical-nav" data-section data-options="deep_linking: false; one_up: true">
