--- a/app/views/layouts/application.html.erb
+++ b/app/views/layouts/application.html.erb
@@ -91,15 +91,15 @@
     </section>
   </nav>
 </div>
+<div class="notice">
+  <% if notice %>
+    <p class="alert-box alert-success"><%= notice %></p>
+  <% end %>
 
-
-
-
-  <%- flash.each do |key, value| -%>
-  <div class="flash flash-<%= key %>">
-    <%= value %>
-  </div>
-  <%- end -%>
+  <% if alert %>
+    <p class="alert-box alert-danger"><%= alert %></p>
+  <% end %>
+</div>
 
   <%= yield %>
 
