--- a/app/views/bands/show.html.erb
+++ b/app/views/bands/show.html.erb
@@ -52,7 +52,7 @@
               <div class="row">
                 <div class="large-10 small-6 columns">
                   <strong><%= link_to song.title, band_song_path(@band, song) %><hr/></strong>
-                  Risus ligula, aliquam nec fermentum vitae, sollicitudin eget urna. Donec dignissim nibh fermentum odio ornare sagittis
+                  <h5> Status: In Progress </h3>
                 </div>
               </div>
             </div>
