--- a/app/views/bands/index.html.erb
+++ b/app/views/bands/index.html.erb
@@ -11,7 +11,9 @@
     <p><%= truncate( "#{band.bio}", length: 42 ) %></p>
   </div>
   <% end %>
-  <%= paginate @bands %>
+  <div class="paginate-center">
+    <%= paginate @bands %>
+  </div>
 </div>
 
 <div class="row">
