--- a/app/views/songs/edit.html.erb
+++ b/app/views/songs/edit.html.erb
@@ -1,3 +1,9 @@
-<p> Fill out the form below to add a new song </p>
+<div class="row">
+  <div class="large-6 large-centered columns"><br>
+    <div class="panel2">
+      <p> Fill out the form below to add a new song </p>
 
-<%= render "edit_song_form" %>
+      <%= render "edit_song_form" %>
+    </div>
+  </div>
+</div>
