--- a/app/assets/stylesheets/custom.css
+++ b/app/assets/stylesheets/custom.css
@@ -56,3 +56,12 @@ body {
   text-align: center;
 
 }
+
+.panel2 {
+  border-style: solid;
+  border-width: 1px;
+  border-color: #d8d8d8;
+  margin-bottom: 1.25rem;
+  padding: 1.25rem;
+  text-align: left;
+  background: #f2f2f2; }
