--- a/app/views/tracks/new.html.erb
+++ b/app/views/tracks/new.html.erb
@@ -1,3 +1,9 @@
-<p>Fill out the form below to add a new track</p>
+<div class="row">
+  <div class="large-6 large-centered columns"><br>
+    <div class="panel2">
+      <p>Fill out the form below to add a new track</p>
 
-<%= render "new_track_form" %>
+      <%= render "new_track_form" %>
+    </div>
+  </div>
+</div>
