--- a/app/views/layouts/application.html.erb
+++ b/app/views/layouts/application.html.erb
@@ -127,10 +127,19 @@
         </div>
         <div class="large-6 columns">
           <ul class="inline-list right">
-            <li><%= link_to 'Sign In', new_user_session_path %></li>
-            <li><%= link_to 'Sign In', new_user_session_path %></li>
-            <li><%= link_to 'Sign In', new_user_session_path %></li>
-            <li><%= link_to 'Sign In', new_user_session_path %></li>
+
+            <li><%= link_to "https://www.linkedin.com/in/jamienf", target: "_blank" do %>
+              <i class="fa fa-linkedin-square"></i>
+            <% end %></li>
+
+            <li><%= link_to "https://github.com/jamienf", target: "_blank" do %>
+              <i class="fa fa-github"></i>
+            <% end %></li>
+
+            <li><%= link_to "https://twitter.com/mayorjama", target: "_blank" do %>
+              <i class="fa fa-twitter-square"></i>
+            <% end %></li>
+
           </ul>
         </div>
       </div>
