--- a/app/views/bands/show.html.erb
+++ b/app/views/bands/show.html.erb
@@ -6,7 +6,7 @@
 
     <div class="large-4 small-12 columns">
       <div class="image-frame">
-        <img src="<%= @band.band_photo %>">
+        <img src="<%= @band.band_photo.bandpage_img %>">
       </div>
 
       <div class="hide-for-small panel">
