--- a/app/assets/stylesheets/custom.css
+++ b/app/assets/stylesheets/custom.css
@@ -58,7 +58,6 @@ body {
 }
 .paginate-center {
   text-align: center;
-
 }
 
 .panel2 {
@@ -69,3 +68,31 @@ body {
   padding: 1.25rem;
   text-align: left;
   background: #f2f2f2; }
+
+  .image {
+    position: relative;
+    width: 100%; /* for IE 6 */
+  }
+
+  h2 {
+    position: absolute;
+    top: 200px;
+    left: 0;
+    width: 100%;
+    padding:1px;
+    border:1px solid #021a40;
+    background-color:#333;
+  }
+
+  h2 span {
+    color: white;
+    font: bold 24px/45px Helvetica, Sans-Serif;
+    letter-spacing: -1px;
+    background: rgb(0, 0, 0); /* fallback color */
+    background: rgba(0, 0, 0, 0.7);
+    padding: 10px;
+  }
+
+  h2 span.spacer {
+    padding:0 5px;
+  }
