--- a/app/views/bands/index.html.erb
+++ b/app/views/bands/index.html.erb
@@ -1,17 +1,30 @@
 <br>
 <div class="row">
-  <% @bands.each do |band| %>
-  <div class="large-4 columns">
+  <div class="large-12 hide-for-small">
 
-    <div class="image-frame">
-      <%= link_to image_tag(band.band_photo.homepage_img), band_path(band) %>
-    </div>
 
-    <h4><%= link_to band.name, band_path(band) %></h4>
-    <p><%= truncate( "#{band.bio}", length: 42 ) %></p>
+    <div class="row">
+      <div class="large-12 columns">
+        <div class="image">
+          <img src="http://www.fitzherbertdiscos.com/images/slider-photos/console-2.jpg" alt="" />
+          <h2><span class='spacer'> MIX IT </span></h2>
+        </div>
+        <hr>
+      </div>
+
   </div>
-  <% end %>
-</div>
+    <% @bands.each do |band| %>
+      <div class="large-4 columns">
+
+        <div class="image-frame">
+          <%= link_to image_tag(band.band_photo.homepage_img), band_path(band) %>
+        </div>
+
+        <h4><%= link_to band.name, band_path(band) %></h4>
+        <p><%= truncate( "#{band.bio}", length: 42 ) %></p>
+      </div>
+    <% end %>
+  </div>
 
 <div class="paginate-center">
   <%= paginate @bands %>
