--- a/app/assets/stylesheets/custom.css
+++ b/app/assets/stylesheets/custom.css
@@ -82,17 +82,45 @@ body {
     padding:1px;
     border:1px solid #021a40;
     background-color:#333;
+    opacity: .75;
   }
 
   h2 span {
     color: white;
     font: bold 24px/45px Helvetica, Sans-Serif;
     letter-spacing: -1px;
-    background: rgb(0, 0, 0); /* fallback color */
-    background: rgba(0, 0, 0, 0.7);
     padding: 10px;
   }
 
   h2 span.spacer {
     padding:0 5px;
   }
+
+  .image:after {
+    content:'\A';
+    position:absolute;
+    width:100%; height:100%;
+    top:0; left:0;
+    background:rgba(0,0,0,0.6);
+    opacity:0;
+    transition: all 1s;
+    -webkit-transition: all 1s;
+  }
+
+  .image:hover:after {
+    opacity:.75;
+  }
+
+  .module {
+    width: auto;
+    max-width:100%;
+    background:
+    linear-gradient(
+      rgba(0, 0, 0, 0.3),
+      rgba(0, 0, 0, 0.7)
+      ),
+      url("http://www.fitzherbertdiscos.com/images/slider-photos/console-2.jpg");
+      background-size: cover;
+      top: -2px;
+      height: 300px;
+    }
