update background color :wq wq

--- a/app/views/bands/index.html.erb
+++ b/app/views/bands/index.html.erb
@@ -4,10 +4,13 @@
 
     <div class="row">
       <div class="large-12 columns">
-        <div class="image module">
-          <h2><span class='spacer'>PLAY IT.   RECORD IT.   MIX IT.</span></h2>
+        <div class="image2 module">
+          <h2><span class='spacer'>LISTEN</span>
+              <span class='spacer'>RECORD</span>
+              <span class='spacer'>MIX</span>
+          </h2>
         </div>
-        <hr>
+        <br>
       </div>
 
   </div>
