--- a/app/assets/stylesheets/custom.css
+++ b/app/assets/stylesheets/custom.css
@@ -1,5 +1,5 @@
 body {
-  background-color: #FFF;
+  background-color: #000;
 }
 
 .image-size{
@@ -67,60 +67,77 @@ body {
   margin-bottom: 1.25rem;
   padding: 1.25rem;
   text-align: left;
-  background: #f2f2f2; }
-
-  .image {
-    position: relative;
-    width: 100%; /* for IE 6 */
+  background: #f2f2f2;
   }
 
-  h2 {
-    position: absolute;
-    top: 200px;
-    left: 0;
-    width: 100%;
-    padding:1px;
-    border:1px solid #021a40;
-    background-color:#333;
-    opacity: .75;
-  }
+.image {
+  position: relative;
+  width: 100%; /* for IE 6 */
+}
 
-  h2 span {
-    color: white;
-    font: bold 24px/45px Helvetica, Sans-Serif;
-    letter-spacing: -1px;
-    padding: 10px;
-  }
+.image2 {
+  position: relative;
+  width: 100%; /* for IE 6 */
+}
 
-  h2 span.spacer {
-    padding:0 5px;
-  }
+.image2:after {
+  content:'\A';
+  position:absolute;
+  width:100%; height:100%;
+  top:0; left:0;
+  background:rgba(0,0,0,0.6);
+  opacity:0;
+  transition: all 1s;
+  -webkit-transition: all 1s;
+}
 
-  .image:after {
-    content:'\A';
-    position:absolute;
-    width:100%; height:100%;
-    top:0; left:0;
-    background:rgba(0,0,0,0.6);
-    opacity:0;
-    transition: all 1s;
-    -webkit-transition: all 1s;
-  }
+h2 {
+  position: absolute;
+  top: 200px;
+  left: 0;
+  width: 100%;
+  padding:1px;
+  border:1px solid #021a40;
+  background-color:#333;
+  opacity: .75;
+}
 
-  .image:hover:after {
-    opacity:.75;
-  }
+h2 span {
+  color: white;
+  font: bold 24px/45px Helvetica, Sans-Serif;
+  letter-spacing: -1px;
+  padding: 10px;
+}
 
-  .module {
-    width: auto;
-    max-width:100%;
-    background:
-    linear-gradient(
-      rgba(0, 0, 0, 0.3),
-      rgba(0, 0, 0, 0.7)
-      ),
-      url("http://www.fitzherbertdiscos.com/images/slider-photos/console-2.jpg");
-      background-size: cover;
-      top: -2px;
-      height: 300px;
-    }
+h2 span.spacer {
+  padding:0 5px;
+}
+
+.image:after {
+  content:'\A';
+  position:absolute;
+  width:100%; height:100%;
+  top:0; left:0;
+  background:rgba(0,0,0,0.6);
+  opacity:0;
+  transition: all 1s;
+  -webkit-transition: all 1s;
+}
+
+.image:hover:after {
+  opacity:.75;
+}
+
+.module {
+  width: auto;
+  max-width:100%;
+  background:
+  linear-gradient(
+    rgba(0, 0, 0, 0.3),
+    rgba(0, 0, 0, 0.9)
+    ),
+    url("http://www.fitzherbertdiscos.com/images/slider-photos/console-2.jpg");
+    background-size: cover;
+    top: -.1px;
+    height: 300px;
+  }
