Added fade ability to bands

--- a/app/assets/stylesheets/custom.css
+++ b/app/assets/stylesheets/custom.css
@@ -113,19 +113,15 @@ h2 span.spacer {
   padding:0 5px;
 }
 
-.image:after {
-  content:'\A';
-  position:absolute;
-  width:100%; height:100%;
-  top:0; left:0;
-  background:rgba(0,0,0,0.6);
-  opacity:0;
-  transition: all 1s;
-  -webkit-transition: all 1s;
+.image {
+  opacity: 1;
+  transition: opacity .25s ease-in-out;
+  -moz-transition: opacity .25s ease-in-out;
+  -webkit-transition: opacity .25s ease-in-out;
 }
 
-.image:hover:after {
-  opacity:.75;
+.image:hover {
+  opacity: 0.5;
 }
 
 .module {
