--- a/app/views/bands/show.html.erb
+++ b/app/views/bands/show.html.erb
@@ -47,6 +47,7 @@
     <div class="large-8 columns">
       <div class="row">
         <div class="large-12 columns">
+        <h4> Songs </h4>
           <% @songs.each do |song| %>
             <div class="panel">
               <div class="row">
