--- a/app/views/bands/index.html.erb
+++ b/app/views/bands/index.html.erb
@@ -1,5 +1,5 @@
 <div class="row">
-  <div class="large-12 hide-for-small">
+  <div class="large-12">
 
 
     <div class="row">
@@ -11,9 +11,9 @@
           </h2>
         </div>
         <br>
-      </div>
-
+    </div>
   </div>
+
     <% @bands.each do |band| %>
       <div class="large-4 columns">
         <div class="image-frame">
@@ -26,7 +26,6 @@
         <p><%= truncate( "#{band.bio}", length: 42 ) %></p>
       </div>
     <% end %>
-  </div>
 
 <div class="paginate-center">
   <%= paginate @bands %>
