--- a/app/views/layouts/application.html.erb
+++ b/app/views/layouts/application.html.erb
@@ -46,12 +46,6 @@
 </head>
 <body>
 
-
-<div class="row">
-  <div class="nav-bar right"></div>
-  <h1><%= link_to 'MixIt', root_path %></h1>
-</div>
-
 <div class="contain-to-grid sticky">
   <nav class="top-bar" data-topbar>
     <ul class="title-area">
@@ -95,7 +89,7 @@
       <ul class="left">
         <li class="divider"></li>
         <li class="divider"></li>
-        <li><%= link_to 'Home', root_path %></li></li>
+        <li class="active"><%= link_to 'Home', root_path %></li></li>
         <li class="divider"></li>
 
 
