--- a/app/views/bands/show.html.erb
+++ b/app/views/bands/show.html.erb
@@ -21,7 +21,7 @@
           <% if signed_in? %>
             <% if @band.band_members.find_by(owner: true) %>
               <% if @band.band_members.find_by(user_id: current_user.id) %>
-                <h6><%= link_to "Add Band Member" %></h6>
+                <h6><%= link_to "Add Band Member", new_band_bandmember_path(@band) %></h6>
               <% end %>
             <% end %>
           <% end %>
@@ -37,7 +37,7 @@
               <h6><%= link_to "Edit Band", edit_band_path(@band) %></h6>
               <h6><%= link_to "Delete Band", band_path(@band), method: :delete, data: { confirm: "Are you sure?"} %></h6>
             </div>
-          <% end %>
+          <% end %>_
         <% end %>
     </div>
 
