--- a/app/views/songs/show.html.erb
+++ b/app/views/songs/show.html.erb
@@ -38,6 +38,7 @@
         <h3> Tracks </h3>
           <dd>
             <button class="play">Play</button>
+            <button class="reset">Reset</button>
           </dd>
         <% @tracks.each_with_index do |track, index| %>
         <h4><strong><%= track.instrument %></strong></h4>
